# DAVAI

./: .gitignore  README.md  pyproject.toml  versions.js
.github/workflows/: documentation.yml
2.0.0/: .documenter-siteinfo.json  index.html
2.0.0/atos_bologna/: index.html
2.0.0/belenos/: index.html
2.0.0/buildoptions/: index.html
2.0.0/ciboulai/: index.html
2.0.0/ciboulai_navigation/: index.html
2.0.0/continuousintegration/: index.html
2.0.0/create_branch/: index.html
2.0.0/exercise4developers/: index.html
2.0.0/expertthresholds/: index.html
2.0.0/fixingproblems/: index.html
2.0.0/inputdata/: index.html
2.0.0/internalorganization/: index.html
2.0.0/investigatingproblems/: index.html
2.0.0/jobs_tasks/: index.html
2.0.0/mtool/: index.html
2.0.0/organization/: index.html
2.0.0/otheroptions/: index.html
2.0.0/parallelprofiling/: index.html
2.0.0/rerun/: index.html
2.0.0/runtests/: index.html
2.0.0/setting_reference/: index.html
2.0.0/tips/: index.html
2.0.0/uget/uget/: index.html
2.0.0/uget/update_namelists/: index.html
2.0.0/userconfiguration/: index.html
2.0.0/versioningtest/: index.html
2.0.1/: .documenter-siteinfo.json  index.html  search_index.js  siteinfo.js
2.0.1/atos_bologna/: index.html
2.0.1/belenos/: index.html
2.0.1/buildoptions/: index.html
2.0.1/ciboulai/: index.html
2.0.1/ciboulai_navigation/: index.html
2.0.1/continuousintegration/: index.html
2.0.1/create_branch/: index.html
2.0.1/exercise4developers/: index.html
2.0.1/expertthresholds/: index.html
2.0.1/fixingproblems/: index.html
2.0.1/inputdata/: index.html
2.0.1/internalorganization/: index.html
2.0.1/investigatingproblems/: index.html
2.0.1/jobs_tasks/: index.html
2.0.1/mtool/: index.html
2.0.1/organization/: index.html
2.0.1/otheroptions/: index.html
2.0.1/parallelprofiling/: index.html
2.0.1/rerun/: index.html
2.0.1/runtests/: index.html
2.0.1/setting_reference/: index.html
2.0.1/tips/: index.html
2.0.1/uget/uget/: index.html
2.0.1/uget/update_namelists/: index.html
2.0.1/userconfiguration/: index.html
2.0.1/versioningtest/: index.html
2.0.1/versions/: index.html
2.0.2/: .documenter-siteinfo.json  index.html  siteinfo.js
2.0.2/atos_bologna/: index.html
2.0.2/belenos/: index.html
2.0.2/buildoptions/: index.html
2.0.2/ciboulai/: index.html
2.0.2/ciboulai_navigation/: index.html
2.0.2/continuousintegration/: index.html
2.0.2/create_branch/: index.html
2.0.2/exercise4developers/: index.html
2.0.2/expertthresholds/: index.html
2.0.2/fixingproblems/: index.html
2.0.2/inputdata/: index.html
2.0.2/internalorganization/: index.html
2.0.2/investigatingproblems/: index.html
2.0.2/jobs_tasks/: index.html
2.0.2/mtool/: index.html
2.0.2/organization/: index.html
2.0.2/otheroptions/: index.html
2.0.2/parallelprofiling/: index.html
2.0.2/rerun/: index.html
2.0.2/runtests/: index.html
2.0.2/setting_reference/: index.html
2.0.2/tips/: index.html
2.0.2/uget/uget/: index.html
2.0.2/uget/update_namelists/: index.html
2.0.2/userconfiguration/: index.html
2.0.2/versioningtest/: index.html
2.0.2/versions/: index.html
dev/: .documenter-siteinfo.json  index.html  search_index.js
dev/atos_bologna/: index.html
dev/belenos/: index.html
dev/buildoptions/: index.html
dev/ciboulai/: index.html
dev/ciboulai_navigation/: index.html
dev/continuousintegration/: index.html
dev/create_branch/: index.html
dev/exercise4developers/: index.html
dev/expertthresholds/: index.html
dev/fixingproblems/: index.html
dev/inputdata/: index.html
dev/installation/: index.html
dev/internalorganization/: index.html
dev/investigatingproblems/: index.html
dev/jobs_tasks/: index.html
dev/mtool/: index.html
dev/namelist/: index.html
dev/organization/: index.html
dev/otheroptions/: index.html
dev/parallelprofiling/: index.html
dev/rerun/: index.html
dev/runtests/: index.html
dev/setting_reference/: index.html
dev/tips/: index.html
dev/uget/uget/: index.html
dev/uget/update_namelists/: index.html
dev/userconfiguration/: index.html
dev/versioningtest/: index.html
dev/versions/: index.html
docs/: make.jl  pages.jl
docs/src/: atos_bologna.md  belenos.md  build.md  buildoptions.md  create_branch.md  index.md  installation.md  internalorganization.md  investigatingproblems.md  jobs_tasks.md  organization.md  otheroptions.md  parallelprofiling.md  rerun.md  runtests.md  setting_reference.md  tips.md  versioningtest.md  versions.md
docs/src/uget/: namelist.md  update_namelists.md
src/davai/: __init__.py  util.py
src/davai/cli/: __init__.py  experiment.py
src/davai/conf/: atos_bologna.ini  base.ini  belenos.ini  user_config_template.ini
src/davai/env/: experiment.py
src/davai/taskutil/: hooks.py  mixins.py
src/davai/vtx/: util.py
src/davai_env/: __init__.py  experiment.py
src/davai_env/cli/: run_tests.py  run_xp.py
src/davai_env/conf/: belenos.ini
src/davai_taskutil/: __init__.py  experiment.py
src/tasks/: ciboulai_xpsetup.py  template.py
src/tasks/assim/: BSM_3D_arome.py  OOPSBSM_3D_arpege.py  OOPSBSM_4D_arpege.py  (+12 more)
(+86 files in other folders)
