[project]
name = "davai"
dynamic = ["version"]
description = "Davai environment: commandlines for running DAVAI-tests experiments."
readme = "README.md"
requires-python = ">=3.10"
keywords = []
license = {text = "CECILL-C"}
authors = [
    { name = "Alexandre Mary"  , email = "alexandre.mary@meteo.fr"}
    ]
dependencies=[
    "pyyaml",
    "ial_build==1.3.3",
    "bronx",
    "epygram==2.0.3",  #comes with ial_expertise, but hook_ts also needs it
    "ial_build==1.3.3",
    "ial_expertise[all]==1.2.4",  # includes epygram and matplotlib
    # indirect dependencies from vortex:
    "requests[socks]",
    "jinja2",
    ]

[project.urls]
source = "https://github.com/ACCORD-NWP/DAVAI-env.git"
tracker = "https://github.com/ACCORD-NWP/DAVAI-env/issues"

[project.scripts]
davai-build = "davai.env.cli.build:main"
davai-ciboulai_init = "davai.env.cli.ciboulai_init:main"
davai-config = "davai.env.cli.config:main"
davai-cwd_is_xp = "davai.env.cli.cwd_is_xp:main"
davai-get_xp_path = "davai.env.cli.get_xp_path:main"
davai-new_xp = "davai.env.cli.new_xp:main"
davai-new_xp_from_bundle = "davai.env.cli.new_xp_from_bundle:main"
davai-run_tests = "davai.env.cli.run_tests:main"
davai-run_xp = "davai.env.cli.run_xp:main"
davai-shelf = "davai.env.cli.shelf:main"
davai-tests_version = "davai.env.cli.tests_version:main"
davai-xp_status = "davai.env.cli.xp_status:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
davai = "src/davai"
tasks = "src/tasks"

[tool.setuptools.package-data]
"davai" = ["conf/*.ini"]
"tasks" = ["conf/*.ini", "conf/*.yaml"]

[tool.setuptools.dynamic]
version = {attr = "davai.__version__"}

